opam-version: "1.2"
maintainer: "andy.ray@ujamjar.com"
authors: "andy.ray@ujamjar.com"
homepage: "https://github.com/ujamjar/hardcaml-llvmsim"
dev-repo: "https://github.com/ujamjar/hardcaml-llvmsim.git"
bug-reports: "https://github.com/ujamjar/hardcaml-llvmsim/issues"
build: [ ["jbuilder" "build" "-p" name "-j" jobs] ]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build & >= "1.0+beta8"}
  "hardcaml" { >= "1.2.0" & < "2.0.0" }
  "ctypes"
  "ctypes-foreign"
  "llvm" {>="3.8" & <="3.9"}
]
available: [ ocaml-version >= "4.02.0" ]
name: "hardcaml-llvmsim"
version: "0.4.0"
license: "ISC"
